# local-gpt-oss

./: .gitignore  README.md  chat.py  pyproject.toml
src/agent/tools/: tools.py
src/llm/: chat.py  generate.py  harmony.py
tests/: chat_test.py  generate_test.py  harmony_test.py
