[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local_gpt_oss"
version = "0.1.0"
description = "Optimized gpt oss 20b for local inference"
requires-python = ">=3.9"
dependencies = [
  "mlx-lm>=0.14",
  "openai-harmony",
  "numpy",
  "tqdm",
  "pandas",
  "matplotlib",
  "faster-whisper",
  "sounddevice",
  "soundfile",
  "torch",
  "torchaudio",
  "transformers",
  "sentencepiece",
  "python-dotenv",
  "spotipy"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm*"]      # only package code
exclude = ["tests*", "bench*", "scripts*", "models*"]
